# typesafe_direct_rest_api

./: .gitignore  README.rst  notes.rst
apilib/: Cargo.toml  lib.rs
apilib/apilib/: request.rs  response.rs  target.rs  tests.rs  transfer.rs
binclient/: Cargo.toml
bindirect/: Cargo.toml  main.rs
binserver/: Cargo.toml  main.rs
client/: Cargo.toml
clientbin/: Cargo.toml
directbin/: Cargo.toml
gen_rest_client/: Cargo.toml  lib.rs
gen_rest_client/gen_rest_client/: example_one.rs
gen_rest_server/: Cargo.toml  lib.rs
gen_rest_server/gen_rest_server/: example_one.rs  server.rs
iface/: Cargo.toml  lib.rs
iface/iface/: example_one.rs
myclient/: Cargo.toml  lib.rs
myclient/myclient/: example_one.rs
myserver/: Cargo.toml  lib.rs
myserver/myserver/: example_one.rs
serverbin/: Cargo.toml
